--- a/MyAccountPage.html
+++ b/MyAccountPage.html
@@ -2,9 +2,99 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <link rel="stylesheet" href="Style/myaccount_style.css">
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+
+    <title>Login</title>
 </head>
 <body>
+<div data-role="page" id="pageone">
+    <div align="center" class="header">
+        <a href="HomePage.html">
+            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60">
+        </a>
+    </div>
 
+
+    <!--Main Content-->
+    <div data-role="main" class="ui-content">
+
+        <h1 id="myaccount-title"><b>My Account </b></h1>
+
+        <div id="profile-container" >
+            <img id="profileImage" src="images/user2.png">
+        </div>
+        <input id="imageUpload" type="file"
+               name="profile_photo" placeholder="Photo" required="" capture>
+        <h3>H D S M Perera</h3>
+        <form method="post" action="demoform.asp" id="form">
+
+            <label for="name" id="namelabel">Name</label>
+            <input type="text" name="name" id="name" placeholder="Username" value="H.D.S.M Perera">
+            <label for="email" id="emaillabel">Email</label>
+            <input type="email" name="email" id="email" placeholder="Email" value="shenaliperera@gmail.com">
+            <label for="password" id="passwordlabel">Change Password</label>
+            <input type="password" name="password" id="password" placeholder="Password" value="12345">
+            <label for="c-password" id="confirmlabel">Confirm Password</label>
+            <input type="password" name="password" id="c-password" placeholder="Password" value="12345">
+            <label for="phoneNo" id="numberlabel">Contact Number</label>
+            <input type="number" name="phoneNo" id="phoneNo" placeholder="Telephone number" value="0771234567">
+            <button class="btn warning" id="update-btn">Update</button>
+            <button class="btn info" id="back-btn">Back</button>
+
+
+        </form>
+    </div>
+
+
+    <!-- Bottom Navigation -->
+    <div data-role="footer" style="text-align:center;" data-position="fixed">
+        <div data-role="navbar" id="bottom_nav">
+            <ul>
+                <li>
+                    <i id="qrcode_icon" class="fas fa-qrcode"></i>
+                </li>
+                <li id="cart_icon" style="width:20% ">
+                    <i class="fas fa-shopping-cart"></i>
+                </li>
+                <li id="home_icon" style="width:20%">
+                    <i class="fas fa-home"></i>
+                </li>
+                <li id="user_icon" style="width:20%">
+                    <i class="fas fa-user"></i>
+                </li>
+                <li id="other_icon" style="width:20%">
+                    <i class="fas fa-ellipsis-v"></i>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</div>
+<script>
+    $("#profileImage").click(function (e) {
+        $("#imageUpload").click();
+    });
+
+    function fasterPreview(uploader) {
+        if (uploader.files && uploader.files[0]) {
+            $('#profileImage').attr('src',
+                window.URL.createObjectURL(uploader.files[0]));
+        }
+    }
+
+    $("#imageUpload").change(function () {
+        fasterPreview(this);
+    });
+</script>
 </body>
 </html>
