--- a/ProductRatingPage.html
+++ b/ProductRatingPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <link rel="stylesheet" href="Style/cartpage_style.css">
+    <link rel="stylesheet" href="Style/ratingpage_css.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -13,13 +13,15 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    <script src="JavaScript/products.js" async></script>
-    <script src="JavaScript/functions.js" async></script>
+    <script src="JavaScript/productRating.js" async></script>
 
+</head>
 <body>
+
 
 <div data-role="page">
 
+    <!--    Categories-->
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
@@ -39,86 +41,64 @@
     </div>
     <!-- Top Navigation -->
 
-    <div data-role="header" id="top_navigation" data-position="fixed">
-        <i class="fas fa-th" id="category_icon" onclick="openNav()"></i>
-        <div align="center" class="logo">
-            <img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60"
-                 onclick="window.location.href='HomePage.html'">
-            <i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>
-        </div>
+    <!--<div data-role="header" id="top_navigation" data-position="fixed">-->
+    <!--<i class="fas fa-th" id="category_icon" onclick="openNav()"></i>-->
+    <!--<div align="center" class="logo">-->
+    <!--<img class="logo" src="images/shopmo%20logo.png" alt="Image" height="60" onclick="window.location.href='HomePage.html'">-->
+    <!--<i class="fa fa-tags" id="promotion_icon" onclick="window.location.href='Promotions.html'"></i>-->
+    <!--</div>-->
 
-        <div data-role="navbar" id="search">
-            <ul>
-                <li style="width:100%">
+    <!--<div data-role="navbar" id="search">-->
+    <!--<ul>-->
+    <!--<li style="width:100%">-->
 
-                    <form class="ui-filterable">
-                        <input id="myFilter" data-type="search" placeholder="Search for items..">
-                    </form>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <!--<form class="ui-filterable">-->
+    <!--<input id="myFilter" data-type="search" placeholder="Search for items..">-->
+    <!--</form>-->
+    <!--</li>-->
+    <!--</ul>-->
+    <!--</div>-->
+    <!--</div>-->
+
 
     <!--Main content-->
     <div data-role="main" class="ui-content">
-        <p id="cart-title"><b>Shopping Cart</b></p>
 
-        <div class="cart-items">
-
-        </div>
-
-        <div>
-            <table align="center">
-                <tr>
-                    <td>
-                        <label for="promocode" id="promocode-label"></label>
-                        <input type="text" name="promocode" id="promocode" placeholder="Apply promo code here">
-                    </td>
-                    <td>
-                        <button class="btn info" id="apply-promo-btn">Apply</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
-
-        <div class="card2">
-            <table align="center">
-                <col width="200">
-                <col width="80">
-
-                <tr class="tr1">
-                    <td classid="texts">
-                        <p> Sub Total</p>
-                        <p> Promo Count </p>
-                        <p> Redeemed Points</p>
-                    </td>
+        <div data-role="main" class="ui-content">
+            <div class="product_image_area">
 
 
-                    <td id="values">
-                        <p class="sub-total">LKR 0 </p>
-                        <p class="code_discount">LKR 0</p>
-                        <p class="point_discount">0</p>
-                    </td>
-                </tr>
-                <br>
-                <tr id="tr2">
-                    <td>
-                        <p>Total</p>
-                    </td>
-                    <td>
-                        <p class="final-total">LKR 0 </p>
-                    </td>
-
-                </tr>
-            </table>
-
-        </div>
-        <div class="main-buttons">
-            <button class="btn info" id="payment-btn" onclick="window.location.href='DeliveryPage.html'">Proceed to
-                Pay
-            </button>
+            </div>
             <br>
-            <button onclick="goBack()" class="btn warning" id="back-btn">Back</button>
+            <div class="s_product_text">
+                <img class="card-img" src="images/rice.jpg" alt="" style="max-width: 300px;">
+                <h3 class="product-title">Daawat Rice 1Kg</h3>
+                <span class="product-id">992</span>
+
+                <div class="rating">
+                    <span id="five-stars" onclick="vote(5);
+                    this.style.color = '#f28500'" data-toggle="tooltip" data-placement="bottom" title="5">&#9734;</span>
+                    <span id="four-stars" onclick="vote(4);
+                    this.style.color = '#f28500'" data-toggle="tooltip" data-placement="bottom" title="4">&#9734;</span>
+                    <span id="three-stars" onclick="vote(3);
+                    this.style.color = '#f28500'" data-toggle="tooltip" data-placement="bottom" title="3">&#9734;</span>
+                    <span id="two-stars" onclick="vote(2);
+                    this.style.color = '#f28500'" data-toggle="tooltip" data-placement="bottom" title="2">&#9734;</span>
+                    <span id="one-star" onclick="vote(1);
+                    this.style.color = '#f28500'" data-toggle="tooltip" data-placement="bottom" title="1">&#9734;</span>
+
+                    <div>
+                        <label for="comments" id="comments-label"></label>
+                        <textarea name="addinfo" id="comments" placeholder="Comments"
+                                  class="product-comments"></textarea>
+
+                    </div>
+                </div>
+                <br>
+                <button onclick="window.location.href='RiceProductPage.html'" class="btn warning submit-rating"
+                        id="back-btn">Submit
+                </button>
+            </div>
         </div>
     </div>
     <!-- Bottom Navigation -->
@@ -144,7 +124,7 @@
             </ul>
         </div>
     </div>
-
 </div>
+
 </body>
 </html>
